overflow fixed, menu fixed

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,7 @@
   background-color: $main-bg-color;
   font-family: "Avenir", Helvetica, sans-serif;
   color: $dark-color;
-  overflow-x: hidden;
+  scroll-behavior: smooth;
 
   @include onWideScreen {
     background-color: #fff;
@@ -20,6 +20,10 @@
     &:target {
       transform: translateX(0);
     }
+  }
+
+  &__section {
+    overflow-x: hidden;
   }
 
   &__section:not(footer:only-of-type) {
