--- a/src/styles/blocks/product-card.scss
+++ b/src/styles/blocks/product-card.scss
@@ -30,7 +30,7 @@
   &__image {
     position: relative;
     left: -10%;
-    width: 115%;
+    width: 120%;
 
     max-height: 270px;
     margin-bottom: 20px;
